--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,69 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: sans-serif;
 }
+
+.container-flex {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+/* HEADER */
+header {
+  height: 40px;
+  background-color: blue;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.lens{
+    color: #fff;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
+}
+
+
+
+/* MAIN */
+main {
+  flex-grow: 1;
+  background-color: brown;
+  overflow: scroll;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.box {
+    height: 170px;
+    width: 300px;
+    background-color: red;
+    margin: 5px;
+    background-image: url("https://picsum.photos//2000/3000");
+    background-size: cover;
+    display: flex;
+    align-items: flex-end;
+  }
+
+  .user-name{
+      padding: 5px;
+      color: #fff;
+      background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+
+
+/* FOOTER */
+footer {
+  height: 110px;
+  background-color: yellow;
+}
+
+/* DA ELIMINARE */
+
