--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ header {
 /* MAIN */
 main {
   background-color: black;
-  overflow: scroll;
+  overflow-y: scroll;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
